// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton/> renders correctly if checked 1`] = `
<div
  className="ToggleStyled-fYeScs edDjoV"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM Qfgae"
    disabled={false}
    htmlFor="toggle-2"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz fskHkg"
      disabled={false}
    >
      <label
        checked={true}
        className="ToggleBarStyled-drkJkQ cZgVrj"
        disabled={false}
        htmlFor="toggle-2"
      />
      <input
        checked={true}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={false}
        id="toggle-2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if checked and disabled 1`] = `
<div
  className="ToggleStyled-fYeScs diuBlX"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM hjzNQu"
    disabled={true}
    htmlFor="toggle-3"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz gUEzqz"
      disabled={true}
    >
      <label
        checked={true}
        className="ToggleBarStyled-drkJkQ kIbVCT"
        disabled={true}
        htmlFor="toggle-3"
      />
      <input
        checked={true}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={true}
        id="toggle-3"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if disabled 1`] = `
<div
  className="ToggleStyled-fYeScs diuBlX"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM hjzNQu"
    disabled={true}
    htmlFor="toggle-1"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz gUEzqz"
      disabled={true}
    >
      <label
        checked={false}
        className="ToggleBarStyled-drkJkQ btPyZx"
        disabled={true}
        htmlFor="toggle-1"
      />
      <input
        checked={false}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={true}
        id="toggle-1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if focused 1`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-11"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-11"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={false}
                hover={false}
                htmlFor="toggle-11"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ dYbwIz"
                  disabled={false}
                  htmlFor="toggle-11"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-11"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-11"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if focused 2`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-11"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-11"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={true}
                hover={false}
                htmlFor="toggle-11"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ kwNtUP"
                  disabled={false}
                  htmlFor="toggle-11"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-11"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-11"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if focused 3`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-11"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-11"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={false}
                hover={false}
                htmlFor="toggle-11"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ dYbwIz"
                  disabled={false}
                  htmlFor="toggle-11"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-11"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-11"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if handles input change and call onChange 1`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-12"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-12"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={false}
                hover={false}
                htmlFor="toggle-12"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ dYbwIz"
                  disabled={false}
                  htmlFor="toggle-12"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-12"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-12"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if handles input change and call onChange 2`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-12"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-12"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={true}
                disabled={false}
                focus={false}
                hover={false}
                htmlFor="toggle-12"
              >
                <label
                  checked={true}
                  className="ToggleBarStyled-drkJkQ cZgVrj"
                  disabled={false}
                  htmlFor="toggle-12"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={true}
                disabled={false}
                id="toggle-12"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={true}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-12"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if hovered 1`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-10"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-10"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={false}
                hover={false}
                htmlFor="toggle-10"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ dYbwIz"
                  disabled={false}
                  htmlFor="toggle-10"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-10"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-10"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if hovered 2`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-10"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-10"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={false}
                hover={true}
                htmlFor="toggle-10"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ kwNtUP"
                  disabled={false}
                  htmlFor="toggle-10"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-10"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-10"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly if hovered 3`] = `
<ToggleButton
  defaultChecked={false}
  disabled={false}
  label=""
  labelPosition="left"
  onChange={[Function]}
  tooltip=""
>
  <ToggleStyled
    disabled={false}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <div
      className="ToggleStyled-fYeScs edDjoV"
      disabled={false}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ToggleLabelStyled
        disabled={false}
        htmlFor="toggle-10"
      >
        <label
          className="ToggleLabelStyled-cXcwbM Qfgae"
          disabled={false}
          htmlFor="toggle-10"
        >
          <ToggleBarBoxStyled
            disabled={false}
            labelPosition="left"
          >
            <div
              className="ToggleBarBoxStyled-kgMfqz fskHkg"
              disabled={false}
            >
              <ToggleBarStyled
                checked={false}
                disabled={false}
                focus={false}
                hover={false}
                htmlFor="toggle-10"
              >
                <label
                  checked={false}
                  className="ToggleBarStyled-drkJkQ dYbwIz"
                  disabled={false}
                  htmlFor="toggle-10"
                />
              </ToggleBarStyled>
              <ToggleInputStyled
                checked={false}
                disabled={false}
                id="toggle-10"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                tabIndex={0}
                type="checkbox"
              >
                <input
                  checked={false}
                  className="ToggleInputStyled-jyiBlM jiHFkI"
                  disabled={false}
                  id="toggle-10"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                  type="checkbox"
                />
              </ToggleInputStyled>
            </div>
          </ToggleBarBoxStyled>
        </label>
      </ToggleLabelStyled>
    </div>
  </ToggleStyled>
</ToggleButton>
`;

exports[`<ToggleButton/> renders correctly with default props 1`] = `
<div
  className="ToggleStyled-fYeScs edDjoV"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM Qfgae"
    disabled={false}
    htmlFor="toggle-0"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz fskHkg"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-drkJkQ dYbwIz"
        disabled={false}
        htmlFor="toggle-0"
      />
      <input
        checked={false}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={false}
        id="toggle-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with label 1`] = `
<div
  className="ToggleStyled-fYeScs edDjoV"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM Qfgae"
    disabled={false}
    htmlFor="toggle-5"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz fskHkg"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-drkJkQ dYbwIz"
        disabled={false}
        htmlFor="toggle-5"
      />
      <input
        checked={false}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={false}
        id="toggle-5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-bnhQAB yxDcd"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-bIYkHe hAIOil"
      >
        Foo
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip and label 1`] = `
<div
  className="ToggleStyled-fYeScs edDjoV"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM Qfgae"
    disabled={false}
    htmlFor="toggle-4"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz fskHkg"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-drkJkQ dYbwIz"
        disabled={false}
        htmlFor="toggle-4"
      />
      <input
        checked={false}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={false}
        id="toggle-4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-bnhQAB yxDcd"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-bIYkHe jZzxXq"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-isAver iQQhwG"
      >
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label and checked 1`] = `
<div
  className="ToggleStyled-fYeScs edDjoV"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM Qfgae"
    disabled={false}
    htmlFor="toggle-7"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz fskHkg"
      disabled={false}
    >
      <label
        checked={true}
        className="ToggleBarStyled-drkJkQ cZgVrj"
        disabled={false}
        htmlFor="toggle-7"
      />
      <input
        checked={true}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={false}
        id="toggle-7"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={true}
      className="ToggleLabelTextBoxStyled-bnhQAB yxDcd"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-bIYkHe jZzxXq"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-isAver iQQhwG"
      >
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label and disabled 1`] = `
<div
  className="ToggleStyled-fYeScs diuBlX"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM hjzNQu"
    disabled={true}
    htmlFor="toggle-8"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz gUEzqz"
      disabled={true}
    >
      <label
        checked={false}
        className="ToggleBarStyled-drkJkQ btPyZx"
        disabled={true}
        htmlFor="toggle-8"
      />
      <input
        checked={false}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={true}
        id="toggle-8"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-bnhQAB jmPBFb"
      disabled={true}
    >
      <span
        className="ToggleLabelTextStyled-bIYkHe jZzxXq"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-isAver iQQhwG"
      >
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label, disabled and checked 1`] = `
<div
  className="ToggleStyled-fYeScs diuBlX"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM hjzNQu"
    disabled={true}
    htmlFor="toggle-9"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz gUEzqz"
      disabled={true}
    >
      <label
        checked={true}
        className="ToggleBarStyled-drkJkQ kIbVCT"
        disabled={true}
        htmlFor="toggle-9"
      />
      <input
        checked={true}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={true}
        id="toggle-9"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={true}
      className="ToggleLabelTextBoxStyled-bnhQAB jmPBFb"
      disabled={true}
    >
      <span
        className="ToggleLabelTextStyled-bIYkHe jZzxXq"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-isAver iQQhwG"
      >
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label, labelPosition=right 1`] = `
<div
  className="ToggleStyled-fYeScs edDjoV"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-cXcwbM Qfgae"
    disabled={false}
    htmlFor="toggle-6"
  >
    <div
      className="ToggleBarBoxStyled-kgMfqz muNTe"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-drkJkQ dYbwIz"
        disabled={false}
        htmlFor="toggle-6"
      />
      <input
        checked={false}
        className="ToggleInputStyled-jyiBlM jiHFkI"
        disabled={false}
        id="toggle-6"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-bnhQAB cSeMzQ"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-bIYkHe jZzxXq"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-isAver iQQhwG"
      >
        <div
          className="TooltipIconStyled-gADMPy UneHs"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;
